--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
+<body>
+
 <header>ALURAFLIX</header>
+
 
 
 <h1>QUALQUER COISA </h1>
@@ -10,3 +13,6 @@
 title="YouTube video player"
  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
  allowfullscreen></iframe>
+
+
+</body>
